# ymir

./: .gitignore  README.md  pyproject.toml
docs/: payload-schema.md  room-node.md  troubleshooting.md
enrollment/: .env.example  enroll.py
mimir/: .env.example  pyproject.toml
mimir/mimir/: __main__.py  config.py  cooldown.py  domain.py  followup.py  router.py
mimir/mimir/api/: app.py
mimir/mimir/output/: avatar.py  tts.py
mimir/tests/: test_cooldown.py  test_domain.py  test_router.py
mimir/tests/fixtures/: sample_routes.json
pipeline_worker/: .env.example  memory_client.py  models.py  server.py  settings.py
pipeline_worker/tests/: test_models.py  test_server.py
room_node/: capture.py  capture_node.py  config.py  sender.py
room_node/tests/: test_capture_node.py  test_sender.py
